fix: add index.backup.ts to tsconfig.json exclude list

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
     "node_modules",
     "dist",
     "tests/**/*",
-    "example.express_app.ts"
+    "example.express_app.ts",
+    "index.backup.ts"
   ]
 }
