chore: remove bun lockfile from repo

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
         "helmet": "^8.1.0",
         "skibbadb": "^0.1.2",
         "xss": "^1.0.15",
-        "zod": "^3.22.0"
+        "zod": "^3.22.0",
+        "zod-to-json-schema": "^3.24.5"
     },
     "devDependencies": {
         "@types/express": "^5.0.2",
